src/objects/FGW_Error__c.object
<CustomObject>
    <description>Errors caught and saved during normal FGW operations</description>
    <fields>
        <fullName>Error_Datetime__c</fullName>
        <description>Date and time at which the error occurred</description>
        <inlineHelpText>Date and time at which the error occurred</inlineHelpText>
        <label>Error Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_Line_Number__c</fullName>
        <description>Line number on which the error occurred, if available</description>
        <inlineHelpText>Line number on which the error occurred, if available</inlineHelpText>
        <label>Error Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Error message provided by the error or exception</description>
        <inlineHelpText>Error message provided by the error or exception</inlineHelpText>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Stack_Trace__c</fullName>
        <description>Stack trace of error, if available</description>
        <inlineHelpText>Stack trace of error, if available</inlineHelpText>
        <label>Error Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <description>Type of error</description>
        <inlineHelpText>Type of error</inlineHelpText>
        <label>Error Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friendly_Message__c</fullName>
        <description>User-friendly message for this error or exception, if available.  Defaults to error message if not available</description>
        <inlineHelpText>User-friendly message for this error or exception, if available.  Defaults to error message if not available</inlineHelpText>
        <label>Friendly Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>FGW Error</label>
    <nameField>
        <displayFormat>Error-{MMDDYY}-{00000}</displayFormat>
        <label>FGW_Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FGW Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>